# xai-gdrive

./: README.md  gdrive_components.py  pyproject.toml  requirements.txt
.github/workflows/: run-workflow-tests.yml
examples/: GDriveSimpleDownload.xircuits  GDriveSimpleUpdate.xircuits  GDriveSimpleUpload.xircuits
